--- a/src/components/Giftcard/giftcard.css
+++ b/src/components/Giftcard/giftcard.css
@@ -42,12 +42,12 @@
     border: 1px solid #ddd;
     padding: 8px;
 }
-.giftcard-table th {
+/* .giftcard-table th {
     background-color: #f2f2f2;
-}
-.giftcard-table tr:nth-child(even) {
+} */
+/* .giftcard-table tr:nth-child(even) {
     background-color: #f2f2f2;
-}
+} */
 .giftcard-table button {
     padding: 4px 8px;
     margin-right: 4px;
